--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+body{
+	width: 100%;
+}
 .navbar{	
 	width: 100%;
 	height: 250px; 
@@ -14,13 +17,14 @@
 #page-title{
 	
 	font-size: 1.5em;
+
 	
 	line-height: 3em;
 	word-spacing: 1.3em;
 	position: relative;
-	width: 37%;
-	left: 62%;
-	right: 100px;
+	width: 50%;
+	left: 50%;
+
 
 }
 /*#page-title1{
@@ -49,13 +53,15 @@ a.active{
 }
 
 #poetry-img{
-	bottom:-190px;
+	
 	margin-top: 10%;
 	margin-left: 5%;
 	margin-right: 5%;
+	float: left;
 
 	
 }
+
 #read{ background-color: red;
 	left:25%;
 	bottom: 0%;
@@ -123,7 +129,7 @@ a.active{
 .slider{
 	width: 1000px;
 	height: 500px;
-	margin-left: 10%;
+	margin-left: 13%;
 	margin-top: 10%;
 	box-shadow:  10px 10px 10px 10px #888888;
 	border-bottom:  2px solid;
@@ -141,7 +147,7 @@ a.active{
 	
 }
 .slider figure img{
-	width: 200%;
+	width: 100%;
 	float: left;
 	
 }
@@ -203,27 +209,107 @@ a.active{
 	border-radius: 9.2px;
 
 }
-@media screen (min-width: 0px) and (max-width: 320px){
-	#slider1{
-		width: 50%;
-		margin-right: 50%;
-		margin-left: 0%;
+.slider-image{
+	height: 500px;
+	width: 1000px;
+}
+@media  only screen   and (max-width: 768px){
+		.slider{
+		width: 650px;
+		margin: auto;
+		height: 300px;
+	
 
 	
 	}
+	.slider figure div{
+		width: 20%;
+
+	}
+
+	.slider-image{
+		
+		height: 300px;
+	}
+	.image{
+		width:400px;
+		height: 300px;
+	}
+	.image1{
+		width:400px;
+		height: 300px;
+		margin-right: 5%;
+	
+	}
+	.para{
+		margin-left: 22%;
+		width: 83%;
+		height: 50%;
+	}
+}
+
+@media  only screen  and (min-width: 0px) and (max-width: 320px){
+	body{
+           width: 200%;
+	}
+	.slider{
+		width: 500px;
+		margin: auto;
+		height: 300px;
+	
+
+	
+	}
+	.slider figure div{
+		width: 20%;
+
+	}
+
+	.slider-image{
+		
+		height: 300px;
+	}
+	#poetry-img{
+		width: 95%;
+		display: inline-block;
+	}
+	.image{
+		width:320px;
+		height: 300px;
+	}
+	.image1{
+		width:320px;
+		height: 300px;
+		margin-right: 5%;
+	}
+	.para{
+		margin-left: 22%;
+		width: 72%;
+		height: 50%;
+	}
+
+
 	#page-title{
-		width: 100%;
+		width: 50%;
+	}
+	#f{
+		width: 50%;
+		padding-top: 25%;
+		padding-right: 15%;
+	}
+	.content{
+		width: 50%;
 	}
 }
 
 
 
-/*
+
 #f{
-	text-align: right;
-	margin-top: -15%;
-	display:block; 
-	margin-right: 20%;
+	float: right;
+	margin-top: -20%;
+	display:inline-block; 
+	margin-right: 10%;
 
 	line-height: 2.3em;
 	font-size: 1.5rem;
@@ -233,16 +319,16 @@ a.active{
 }
 .common_btn{
 	color :white;
-	margin-left: 250px;
-	background: blue;
-	
-	
+	background: purple;
+	width: 80px;
+	height: 30px;
 
 }
 .common_btn:hover{
 	color:black
-	background-color:yellow;
 	border-color: black;
+	transition: .4s;
+
 }
 input[type=text]:focus {
   background-color: lightblue;
@@ -251,7 +337,8 @@ input[type=text]{
 	
 	position:relative;
 	display: table;
-	right: -92%;
+	
+	right: -5%;
 	border-top: transparent;
 	border-right: transparent;
 	border-left: transparent;
@@ -262,3 +349,141 @@ input[type=text]{
 
 	
 }
+
+
+/* siders*/
+
+*{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+}
+body {
+  font-family: 'Roboto', sans-serif;
+}
+.sidebar {
+  position: fixed;
+  left: -250px;
+  width: 210px;
+  height: 100%;
+  background: silver;
+  transition: all .5s ease;
+}
+.sidebar header {
+  font-size: 22px;
+  color: white;
+  line-height: 70px;
+  text-align: center;
+  background: #063146;
+  user-select: none;
+}
+.sidebar ul a{
+  display: block;
+  height: 100%;
+  width: 100%;
+  line-height: 65px;
+  font-size: 20px;
+  color: white;
+  padding-left: 40px;
+  box-sizing: border-box;
+  border-bottom: 1px solid black;
+  border-top: 1px solid rgba(255,255,255,.1);
+  transition: .4s;
+}
+ul li:hover a{
+  padding-left: 50px;
+}
+.sidebar ul a i{
+  margin-right: 16px;
+}
+#check{
+  display: none;
+}
+label #btn,label #cancel{
+  position: absolute;
+  background: transparent;
+  border-radius: 3px;
+  cursor: pointer;
+}
+label #btn{
+  left: 35px;
+  top: 25px;
+  font-size: 30px;
+  color: white;
+  background:transparent;
+  padding: 5px 5px;
+  transition: all .5s;
+}
+label #cancel{
+  z-index: 1111;
+  left: -180px;
+  top: 17px;
+  font-size: 30px;
+  color: white;
+  padding: 4px 9px;
+  transition: all .5s ease;
+}
+#check:checked ~ .sidebar{
+  left: 0;
+}
+#check:checked ~ label #btn{
+  left: 250px;
+  opacity: 0;
+  pointer-events: none;
+}
+#check:checked ~ label #cancel{
+  left: 180px;
+}
+/* forms*/
+#f1{
+	text-align: center;
+	position: center;
+}
+#form-text{
+	display: inline-block;
+}
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  margin: auto;
+  width: 70%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+#FAQ{
+	margin: auto;
+	
+	padding:100px;
+	display:table;
+	margin-left: 22%;
+}
+
+#Q1{
+	padding-right: 40%;
+	text-align: left;
+	display:table;
+	color: blue;
+	font-size: 1.3em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
